--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,34 +1,76 @@
+#header {
+	height: 80px;
+		display: block;
+		h3 {
+			position: absolute;
+			left: 10%;
+			top: 0px;
+			font-weight: 900;
+		}
+		img {
+			height: 30px;
+			position: absolute;
+			top: 20px;
+			right: 50px;
+		}
+}
 #home {
 	position: relative;
-	min-height: 100%;
-	.welcome {
-		margin: 0 auto;
-		position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    h1 {
+	height: calc(100% - 80px);
+	width: 100%;
+	text-align: center;
+	display: block;
+	overflow: hidden;
+	#info {
+		height: 120px;
+		.halves {
+			padding: 30px;
+			padding-top: 0;
+		}
+		
+		p {
+			text-align: center;
+			font-size: 10px;
 			margin: 0 auto;
 		}
+		h5 {
+			text-align: center;
+			margin: 0 auto;
+			// font-size: 10px;
+			border: none;
+			background-color: white;
+			border-radius: 5px;
+			text-shadow: 1px 1px rgba(0,0,0,.2);
+			padding: 5px 20px;
+			font-weight: 900;
+			margin-top: 20px;
+		}
 	}
-	
-}
-#footer {
-	height: 60px;
-	width: 100%;
-	padding: 10px;
-	box-shadow: 0px -5px 20px -5px rgba(0,0,0,.1);
-  background-color: white;
-	p, p a {
-		margin: 1px auto;
-		text-align: center;
-		font-size: 12px;
-	}
-	h5 {
-		text-align: center;
-		display: inline-block;
-		margin: 1px auto;
-		text-align: center;
+	#animation {
+		height: calc(100% - 120px);
+		position: relative;
+		img {
+			max-height: 80%;
+			max-width: 90%;
+			width: auto;
+		}
+		#links {
+			text-align: center;
+			height: 150px;
+			width: 50px;
+			position: absolute;
+			bottom: 100px;
+			right: 0;
+			padding: 10px;
+			img {
+				height: 20px;
+				margin: 10px auto;
+			}
+			#behance {
+				height: 25px;
+				margin: 8px auto;
+				padding-left: 1px;
+			}
+		}
 	}
 }
