--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -3,7 +3,9 @@ html,  body {
   width: 100%;
   margin: 0;
 }
-
+.row {
+	text-align: center;
+}
 .container-fluid {
 	padding-left: 0;
 	padding-right: 0;
