--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -22,7 +22,8 @@
 	display: block;
 	overflow: hidden;
 	#info {
-		height: 120px;
+		height: 200px;
+		position: relative;
 		.halves {
 			padding: 30px;
 			padding-top: 0;
@@ -40,18 +41,67 @@
 			border: none;
 			background-color: white;
 			border-radius: 5px;
-			text-shadow: 1px 1px rgba(0,0,0,.2);
-			padding: 5px 20px;
+			// text-shadow: 1px 1px rgba(0,0,0,.2);
+			padding: 5px;
 			font-weight: 900;
 			margin-top: 20px;
 		}
+		#buttons {
+			width: 150px;
+			margin: 0 auto;
+		}
+		#button1, #button2 {
+			&:hover {
+				cursor: pointer;
+				box-shadow: 0px 5px 20px -5px rgba(0,0,0,.5);
+			}
+		}
+		#button1 {
+			box-shadow: 0px 5px 20px -5px rgba(0,0,0,1);
+		}
+		#bio1, #bio2 {
+			margin: 20px auto;
+			position: absolute;
+			width: 100%;
+			top: 100px;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			p {
+				margin: 10px auto;
+				width: 200px;
+			}
+			h6 {
+				cursor: pointer;
+				margin: 20px auto;
+				width: 100px;
+				text-align: center;
+				// box-shadow: 0px 5px 20px -5px rgba(0,0,0,.5);
+				border: 1px solid black;
+				padding: 5px;
+				background-color: white;
+			}
+		}
+		#bio2 {
+			display: none;
+		}
 	}
 	#animation {
-		height: calc(100% - 120px);
-		position: relative;
-		img {
+		// height: calc(100% - 200px);
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: -1;
+		#trumpet {
+			position: absolute;
+			top: 50%;
+	    left: 60%;
+	    transform: translate(-50%, -50%);
 			max-height: 80%;
-			max-width: 90%;
+			max-width: 50%;
 			width: auto;
 		}
 		#links {
