--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,24 +1,23 @@
 <div class="container-fluid no-gutters" id="home">
 	<div class="col-md-12" id="info">
-		<div class="col-md-6 col-sm-6 col-xs-6 halves">
-			<div class="row">
-				<h5>Sketches</h5>
-			</div>
-			<div class="row">
-				<p>Short bio for each page and what it contains</p>
-			</div>
-		</div>
-		<div class="col-md-6 col-sm-6 col-xs-6 halves">
-			<div class="row">
-				<h5>Animations</h5>
-			</div>
-			<div class="row">
-				<p>Short bio for each page and what it contains</p>
-			</div>
-		</div>
+		<div class="col-md-6 col-sm-6 col-xs-10class="row"  halves">
+				<div class="row no-gutters" id="buttons">
+					<h5 id="button1">Sketches</h5><h5>|</h5><h5 id="button2">Animations</h5>
+				</div>
+				<div class="col-md-12" id="bio1">
+					<p class="row">Bio Numero Uno. Short bio for each page and what it contains</p>
+					<h6 id="goto1">Go To Sketches</h6>
+				</div>
+				<div class="col-md-12" id="bio2">
+					<p class="row">Bio Numero Dos. Short bio for each page and what it contains</p>
+					<h6 id="goto2">Go To Animations</h6>
+				<!-- </div> -->
+				</div>
 	</div>
+</div>
+
 	<div class="col-md-12 no-gutters" id="animation">
-		<%=image_tag image_url("https://s3.amazonaws.com/denizilhan/trumpetguy.png")%>
+		<%=image_tag image_url("https://s3.amazonaws.com/denizilhan/trumpetguy.png"), :id => "trumpet"%>
 		<div id="links">
 			<div class="row">
 				<%= image_tag image_url("https://s3.amazonaws.com/denizilhan/blfb.png") %>
