--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alex+Brush|B612+Mono|Cormorant+SC|Dancing+Script|Dorsa|Fahkwang|Goudy+Bookletter+1911|Italianno|Josefin+Slab|Junge|Montaga|Playfair+Display+SC|Poiret+One|Prata|Qwigley|Rochester|Sorts+Mill+Goudy|Srisakdi" rel="stylesheet">
+
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
