--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -3,6 +3,7 @@ html,  body {
   width: 100%;
   margin: 0;
 }
+
 .row {
 	text-align: center;
 }
@@ -54,7 +55,11 @@ h1 {
 	color: black;
 }
 p,h1, h2, h3, h4, h5, h6, a, li, label, input {
-font-family: 'Abel', sans-serif;
+// font-family: 'Poiret One', cursive;
+// font-family: 'Sorts Mill Goudy', serif;
+
+// name? font-family: 'Italianno', cursive;
+font-family: 'Cormorant SC', serif;
 text-decoration-line: none;
 text-decoration: none;
 
