--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container-fluid no-gutters" id="home">
+<div class="container-fluid no-gutters main" id="home">
 	<div class="col-md-12" id="info">
-		<div class="col-md-6 col-sm-6 col-xs-10" class="row"  halves">
+		<div class="col-md-6 col-sm-6 col-xs-10 row" id="shadow">
 				<div class="row no-gutters" id="buttons">
 					<h5 id="button1">Sketches</h5><h5>|</h5><h5 id="button2">Animations</h5>
 				</div>
@@ -8,12 +8,7 @@
 					<p class="row" id="bio1A">Bio Numero Uno. Short bio for each page and what it contains</p>
 					<a href="#" id="goto1">Go To Sketches</a>
 				</div>
-				<!-- <div class="col-md-12" id="bio2"> -->
-					<!-- <p class="row">Bio Numero Dos. Short bio for each page and what it contains</p> -->
-					<!-- <h6 id="goto2">Go To Animations</h6> -->
-				<!-- </div>
-				</div> -->
-	<!-- </div> -->
+	</div>
 </div>
 
 	<div class="col-md-12 no-gutters" id="animation">
