--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -26,10 +26,19 @@
 	#info {
 		height: 200px;
 		position: relative;
-		.halves {
-			padding: 30px;
-			padding-top: 0;
+		padding-left: 5%;
+		#shadow {
+			// box-shadow: 5px 8px 30px -6px rgba(0,0,0,.5);
+			height: 100%;
+			width: 400px;
+			margin: 0 auto;
+			// border-radius: 10px;
+
 		}
+		// .halves {
+		// 	padding: 30px;
+		// 	padding-top: 0;
+		// }
 		
 		p {
 			text-align: center;
@@ -50,6 +59,7 @@
 		}
 		#buttons {
 			width: 250px;
+			height: 45px;
 			margin: 0 auto;
 		}
 		#button1, #button2 {
@@ -100,10 +110,10 @@
 		z-index: -1;
 		#trumpet {
 			position: absolute;
-			top: 50%;
+			top: 60%;
 	    left: 60%;
 	    transform: translate(-50%, -50%);
-			max-height: 80%;
+			max-height: 50%;
 			max-width: 50%;
 			width: auto;
 		}
