full page transition style

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,20 +9,20 @@
 					<a href="#" id="goto1">Go To Sketches</a>
 				</div>
 	</div>
-</div>
+<!-- </div> -->
 
 	<div class="col-md-12 no-gutters" id="animation">
 		<%=image_tag image_url("https://s3.amazonaws.com/denizilhan/trumpetbw.png"), :id => "trumpet"%>
 		<div id="links">
-			<div class="row">
+			<!-- <div class="row"> -->
 				<a href="https://www.instagram.com/denizilhan/" target="_blank"><%= image_tag image_url("https://s3.amazonaws.com/denizilhan/blfb.png") %></a>
-			</div>
-			<div class="row">
+			<!-- </div> -->
+			<!-- <div class="row"> -->
 				<a href="https://www.instagram.com/denizilhan/" target="_blank"><%= image_tag image_url("https://s3.amazonaws.com/denizilhan/blinsta.png") %></a>
-			</div>
-			<div class="row">
+			<!-- </div> -->
+			<!-- <div class="row"> -->
 				<a href="https://www.instagram.com/denizilhan/" target="_blank" id="behance"><%= image_tag image_url("https://s3.amazonaws.com/denizilhan/behancebw.png") %></a>
-			</div>
+			<!-- </div> -->
 		</div>
 	</div>
 </div>
