--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
 	  	<%=image_tag image_url("https://s3.amazonaws.com/denizilhan/hamburgermenu.png")%>
   	</a>
 	  <div class="col-md-4 col-sm-6 col-xs-12" >
-		  <div class="row">
+		  <div class="row" id="menu_info">
 		  	<p>Deniz O. Ilhan</p>
 		  	<p>New York, NY</p>
 		  	<p>Deniz@ilhan.com</p>
