--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -15,18 +15,22 @@
       cursor: pointer;
     }
   .sidenav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    right: 0;
-    background-color: white; /* Black*/
-          // box-shadow: 0px 5px 20px -5px rgba(0,0,0,1);
-
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 80px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    height: 100%;
+    width: 100%; 
+    position: fixed; 
+    z-index: 2;
+    top: 0;
+    left: 100%;
+    background-color: white; 
+    box-shadow: 0px 5px 50px -1px rgba(0,0,0,1);
+    overflow-x: hidden;
+    padding-top: 50px; 
+    transition: 0.5s; 
+    #menu_info {
+      width: 200px;
+      height: 200px;
+      padding: 10px;
+    }
     .links {
       text-align: center;
       a {
@@ -43,31 +47,22 @@
     p {
       display: block;
       width: 100%;
-      // color: white;
     }
-    /* When you mouse over the navigation links, change their color */
     a:hover {
       color: #f1f1f1;
     }
 
-    /* Position and style the close button (top right corner) */
     .closebtn {
-      // position: absolute;
-      // top: 0;
-      // right: -20px;
       font-size: 36px;
       margin-right: 50px;
-      // color: white;
     }
   }
 }
-  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
   .main {
     transition: margin-right .5s;
     padding: 20px;
   }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 50px;}
   .sidenav a {font-size: 18px;}
