--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -24,21 +24,16 @@
 	overflow: hidden;
 	padding-top: 5%;
 	#info {
-		height: 200px;
+		height: 100%;
 		position: relative;
 		padding-left: 5%;
 		#shadow {
-			// box-shadow: 5px 8px 30px -6px rgba(0,0,0,.5);
-			height: 100%;
+			height: 200px;
 			width: 400px;
 			margin: 0 auto;
-			// border-radius: 10px;
+			z-index: 1;
 
 		}
-		// .halves {
-		// 	padding: 30px;
-		// 	padding-top: 0;
-		// }
 		
 		p {
 			text-align: center;
@@ -48,11 +43,9 @@
 		h5 {
 			text-align: center;
 			margin: 0 auto;
-			// font-size: 10px;
 			border: none;
 			background-color: white;
 			border-radius: 5px;
-			// text-shadow: 1px 1px rgba(0,0,0,.2);
 			padding: 5px;
 			font-weight: 900;
 			margin-top: 20px;
@@ -107,7 +100,7 @@
 		bottom: 0;
 		left: 0;
 		right: 0;
-		z-index: -1;
+		// z-index: 1;
 		#trumpet {
 			position: absolute;
 			top: 60%;
@@ -125,6 +118,7 @@
 			bottom: 100px;
 			right: 0;
 			padding: 10px;
+			// z-index: 4;
 			img {
 				height: 20px;
 				margin: 10px auto;
