--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,7 @@
 		</span>
 	</div>
 	<div id="mySidenav" class="sidenav">
-	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
-	  	<%=image_tag image_url("https://s3.amazonaws.com/denizilhan/hamburgermenu.png")%>
-  	</a>
+	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
 	  <div class="col-md-4 col-sm-6 col-xs-12" >
 		  <div class="row" id="menu_info">
 		  	<p>Deniz O. Ilhan</p>
