--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,13 @@
+$greymenu: #818181;
+$hovermenu: #f1f1f1;
 #header {
-  height: 80px;
+  height: 100px;
     display: block;
+    z-index: 5;
     h2 {
       position: absolute;
       left: 10%;
-      top: 0px;
+      top: 30px;
       font-size: 40px;
     }
     img {
@@ -16,7 +19,7 @@
     }
   .sidenav {
     height: 100%;
-    width: 100%; 
+    width: 500px; 
     position: fixed; 
     z-index: 2;
     top: 0;
@@ -37,7 +40,7 @@
         padding: 20px;
         text-decoration: none;
         font-size: 25px;
-        color: #818181;
+        color: $greymenu;
         display: block;
         transition: 0.3s;
         margin: 0 auto;
@@ -49,17 +52,20 @@
       width: 100%;
     }
     a:hover {
-      color: #f1f1f1;
+      color: $hovermenu;
     }
 
     .closebtn {
-      font-size: 36px;
-      margin-right: 50px;
+      font-size: 20px;
+      position: absolute;
+      top: 19px;
+      right: 59px;
+      color: $greymenu;
     }
   }
 }
   .main {
-    transition: margin-right .5s;
+    transition: margin-left .5s;
     padding: 20px;
   }
 
