--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -32,15 +32,11 @@ html,  body {
 a {
 	text-decoration-line: none;
 	color: rgba(0,0,0,.9);
-}
-a:hover {
-	color: rgba(0,0,0,1);
-	text-decoration-line: none;
-	text-decoration: none;
-}
-a:visited { 
-	text-decoration: none;
-	text-decoration-line: none;
+	&:hover, &:active, &:visited, &:focus { 
+		text-decoration: none;
+		text-decoration-line: none;
+		color: black;
+	}
 }
 hr {
 	width: 70%;
