--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid no-gutters main" id="home">
+<div class="container-fluid" id="home">
 	<div class="col-md-12" id="info">
 		<div class="col-md-6 col-sm-6 col-xs-10 row" id="shadow">
 				<div class="row no-gutters" id="buttons">
@@ -9,20 +9,12 @@
 					<a href="#" id="goto1">Go To Sketches</a>
 				</div>
 	</div>
-<!-- </div> -->
-
 	<div class="col-md-12 no-gutters" id="animation">
 		<%=image_tag image_url("https://s3.amazonaws.com/denizilhan/trumpetcolor4.png"), :id => "trumpet"%>
 		<div id="links">
-			<!-- <div class="row"> -->
 				<a href="https://www.instagram.com/denizilhan/" target="_blank"><%= image_tag image_url("https://s3.amazonaws.com/denizilhan/blfb.png") %></a>
-			<!-- </div> -->
-			<!-- <div class="row"> -->
 				<a href="https://www.instagram.com/denizilhan/" target="_blank"><%= image_tag image_url("https://s3.amazonaws.com/denizilhan/blinsta.png") %></a>
-			<!-- </div> -->
-			<!-- <div class="row"> -->
 				<a href="https://www.instagram.com/denizilhan/" target="_blank" id="behance"><%= image_tag image_url("https://s3.amazonaws.com/denizilhan/behancebw.png") %></a>
-			<!-- </div> -->
 		</div>
 	</div>
 </div>
