--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,56 @@
 <div class="container-fluid" id="header">
 	<div class="row">
 		<h2>Deniz O. Ilhan</h2>
+		<p class="no-gutters" id="notice"><%= notice %></p>
+
 		<span onclick="openNav()">
 			<%=image_tag image_url("https://s3.amazonaws.com/denizilhan/hamburgermenu.png")%>
 		</span>
 	</div>
+
+	<% if !@homepage %>
+		<style>
+			#header {
+				height: 50px;
+				background-color: rgba(250,250,250,.9);
+				position: fixed;
+				top: 0;
+				left: 0;
+				width: 100%;
+				box-shadow: 0px 5px 20px -5px rgba(0,0,0,.2);
+			}
+			#header h2 {
+				font-size: 25px;
+				margin: 0;
+				top: 15px;
+				left: 100px;
+			}
+			#header img {
+				top: 11px;
+			}
+		</style>
+	<% end %>
+
 	<div id="mySidenav" class="sidenav">
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
-	  <div class="col-md-4 col-sm-6 col-xs-12" >
+	  <div class="col-md-5 col-sm-6 col-xs-12" >
 		  <div class="row" id="menu_info">
 		  	<p>Deniz O. Ilhan</p>
 		  	<p>New York, NY</p>
 		  	<p>Deniz@ilhan.com</p>
-		  	<p>212-454-4545</p>
+		  	<!-- <p>212-454-4545</p> -->
 		  </div>
 		</div>
-		<div class="col-md-8 col-sm-6 col-xs-12 links">
-			<a href="#">Home</a>
-		  <a href="#">About</a>
-		  <a href="#">Gallery</a>
-		  <a href="#">Store</a>
-		  <a href="#">Contact</a>
-		  
+		<div class="col-md-7 col-sm-6 col-xs-12 links">
+			<a href="/">Home</a>
+		  <a href="/abouts">About</a>
+		  <a href="/galleries">Gallery</a>
+		  <a href="/stores">Store</a>
+		  <a href="/contacts">Contact</a>
+		</div>
+		<div class="col-md-12 developer">
+			<p>Website by</p>
+			<p>Hans Palacios</p>
 		</div>
 	</div>
 </div>
